# flowrep

./: .coverage.runnervm727z3.pid3908.XUJ2itbx.HNQIp837rWOh  .coverage.runnervm727z3.pid3997.XrTNo7Ix.HfKbr387rd2h  .coverage.runnervm727z3.pid4003.XCM6YEex.HfKbr387rd2h  .coverage.runnervm727z3.pid4008.XvTiDXSx.HfKbr387rd2h  .coverage.runnervm727z3.pid4015.XGKLhDZx.HfKbr387rd2h  .coverage.runnervm727z3.pid4118.X0Yr8dux.H80ZQNXY4LCh  .coverage.runnervm727z3.pid4132.XnHVZ0rx.HvyNB930eBIh  .coverage.runnervm727z3.pid4142.XkyoqVpx.HvyNB930eBIh  .coveragerc  .gitattributes  .gitignore  CITATION.cff  pyproject.toml
.binder/: environment.yml  postBuild
.ci_support/: environment-notebook.yml  environment-optional.yml  environment-pwd.yml  environment.yml  lower-bounds.yml  upper-bounds.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: daily.yml  dependabot-pr.yml  pr-labeled.yml  pr-target-opened.yml  preview-release.yml  push-pull.yml  weekly.yml
chefflow/: _version.py
docs/: README.md  conf.py  environment.yml  index.rst
flowrep/: __init__.py  _version.py  converter.py  crawler.py  datastructure.py  model.py  parser.py  tools.py  wfms.py  workflow.py
flowrep/api/: parsers.py
flowrep/models/: __init__.py  base_models.py  edge_models.py  edges.py  live.py  model.py  parser.py  subgraph_protocols.py  subgraph_validation.py  union.py  wfms.py
flowrep/models/api/: converters.py  live.py  nodes.py  parsers.py  schemas.py  wfms.py
flowrep/models/converters/: python_workflow_definition.py
flowrep/models/nodes/: __init__.py  atomic_model.py  base_models.py  for_model.py  helper_models.py  if_model.py  model.py  subgraph_protocols.py  try_model.py  union.py  while_model.py  workflow_model.py
flowrep/models/parsers/: atomic_parser.py  case_helpers.py  condition_helpers.py  dependency_parser.py  for_parser.py  func_def_parser.py  if_parser.py  import_parser.py  label_helpers.py  object_scope.py  parser_helpers.py  parser_protocol.py  symbol_scope.py  try_parser.py  while_parser.py  workflow_parser.py
flowrep/nodes/: __init__.py  atomic_model.py  try_model.py
flowrep/parsers/: for_parser.py  try_parser.py
notebooks/: example.ipynb  user-guide.ipynb
src/flowrep/: __init__.py  _annotation_source.py  base_models.py  edge_models.py  live.py  pysource.py  retrospective.py  std.py  storage.py  storage_widget.py  subgraph_validation.py  wfms.py
src/flowrep/api/: __init__.py  converters.py  live.py  schemas.py  tools.py  wfms.py
src/flowrep/compiler/: __init__.py  annotate.py  flow_control.py  function.py  pysource.py  render.py  source.py  statements.py  sugar.py
src/flowrep/converters/: python_workflow_definition.py
src/flowrep/nodes/: __init__.py  atomic_recipe.py  for_model.py  for_recipe.py  helper_models.py  if_model.py  if_recipe.py  try_recipe.py  union.py  union_types.py  while_model.py  while_recipe.py  workflow_model.py  workflow_recipe.py
src/flowrep/parsers/: atomic_parser.py  attribute_parser.py  case_helpers.py  chain_parser.py  constant_parser.py  dataclass_parser.py  dependency_parser.py  dependency_parser.py,cover  for_parser.py  if_parser.py  import_parser.py  item_parser.py  label_helpers.py  object_scope.py  parser_helpers.py  parser_protocol.py  symbol_scope.py  try_parser.py  while_parser.py  workflow_parser.py
src/flowrep/prospective/: __init__.py  atomic_recipe.py  constant_recipe.py  for_recipe.py  helper_models.py  if_recipe.py  std.py  try_recipe.py  union_types.py  while_recipe.py  workflow_recipe.py
src/flowrep/retrospective/: datastructures.py  storage.py  storage_widget.py
tests/flowrep_static/: library.py  local_library.py  makers.py  test_helpers.py
tests/integration/: test_namespace_hygiene.py  test_parsing_composite_workflow.py  test_parsing_for_loops.py  test_parsing_for_nodes.py  test_parsing_if_nodes.py  test_parsing_while_nodes.py  test_readme.py
tests/integration/parsers/: test_parsing_atomic_classes.py  test_parsing_attribute_access.py  test_parsing_composite_workflow.py  test_parsing_constants.py  test_parsing_for_nodes.py  test_parsing_if_nodes.py  test_parsing_item_access.py  test_parsing_reassignment.py  test_parsing_try_nodes.py  test_parsing_while_nodes.py
tests/unit/: test_annotation_source.py  test_base_models.py  test_crawler.py  test_datastructure.py  test_for_model.py  test_helper_models.py  test_if_model.py  test_live_wfms.py  test_model.py  test_parser.py  test_parsers.py  test_pysource.py  test_retrospective_wfms.py  test_storage.py  test_storage_widget.py  test_subgraph_validation.py  test_tests.py  test_tools.py  test_try_model.py  test_while_model.py  test_widget.py  test_workflow.py
tests/unit/compiler/: test_annotate.py  test_compiler.py  test_render.py  test_sugar.py
tests/unit/converters/: test_python_workflow_definition.py
tests/unit/models/: test_atomic_parser.py  test_base_models.py  test_edges.py  test_edges_model.py  test_for_model.py  test_if_model.py  test_live_wfms.py  test_model.py  test_parser.py  test_subgraph_protocols.py  test_subgraph_validation.py  test_try_model.py  test_while_model.py
tests/unit/models/nodes/: test_atomic_model.py  (+8 more)
tests/unit/nodes/: test_atomic_model.py  test_for_model.py  test_helper_models.py  test_if_model.py  test_if_recipe.py  test_try_model.py  test_try_recipe.py  test_union.py  test_union_types.py  test_while_model.py  test_while_recipe.py  test_workflow_model.py  test_workflow_recipe.py
tests/unit/parsers/: test_atomic_parser.py  test_attribute_parser.py  test_chain_parser.py  test_constant_parser.py  test_dataclass_parser.py  test_dependency_parser.py  test_for_parser.py  test_if_parser.py  test_import_parser.py  test_item_parser.py  test_label_helpers.py  test_parser_helpers.py  test_symbol_scope.py  test_try_parser.py  test_while_parser.py  test_workflow_parser.py
tests/unit/prospective/: test_atomic_recipe.py  test_constant_recipe.py  test_for_recipe.py  test_helper_models.py  test_if_recipe.py  test_std.py  test_try_recipe.py  test_union_types.py  test_while_recipe.py  test_workflow_recipe.py
(+15 files in other folders)
