[build-system]
requires = [
    "numpy",
    "setuptools>=68.0.0",
    "versioneer[toml]==0.29",

]
build-backend = "setuptools.build_meta"

[project]
name = "flowrep"
description = "flowrep - Your premier tool for workflow representations"
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.11, <3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy==2.3.1",
]
dynamic = [ "version",]
authors = [
    { name = "Sam Waseda", email = "waseda@mpie.de" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://flowrep.readthedocs.io"
Repository = "https://github.com/pyiron/flowrep"

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "flowrep/_version.py"
parentdir_prefix = "flowrep"
tag_prefix = "flowrep-"

[tool.setuptools.packages.find]
include = [ "flowrep*",]

[tool.setuptools.dynamic.version]
attr = "flowrep.__version__"

[tool.ruff]
exclude = ["docs", "notebooks", "setup.py", "_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"] #ignore line-length violations

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in init files -- we specify APIs this way

[tool.black]
extend-exclude = '''
(
  ^/docs
)
'''
