[build-system]
requires = [
    "hatchling==1.28.0",
    "hatch-vcs==0.5.0",
]
build-backend = "hatchling.build"

[project]
name = "flowrep"
description = "flowrep - Your premier tool for workflow representations"
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.11, <3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "networkx==3.6.1",
    "pydantic==2.12.5",
]
dynamic = [ "version",]
authors = [
    { name = "Sam Waseda", email = "waseda@mpie.de" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://flowrep.readthedocs.io"
Repository = "https://github.com/pyiron/flowrep"

[tool.hatch.build]
include = [
    "flowrep"
]

[tool.hatch.build.hooks.vcs]
version-file = "flowrep/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "flowrep"
]

[tool.hatch.build.targets.wheel]
packages = [
    "flowrep"
]

[tool.hatch.version]
source = "vcs"
path = "flowrep/_version.py"

[tool.ruff]
exclude = ["docs", "notebooks", "setup.py", "_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"] #ignore line-length violations

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in init files -- we specify APIs this way

[tool.black]
extend-exclude = '''
(
  ^/docs
)
'''

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = [
    "^docs/conf\\.py$",
    "^tests/",

]
ignore_missing_imports = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "flowrep.tools",
    "flowrep.workflow"
]
ignore_errors = true
