[build-system]
requires = [
    "hatchling==1.29.0",
    "hatch-vcs==0.5.0",
]
build-backend = "hatchling.build"

[project]
name = "flowrep"
description = "flowrep - Your premier tool for workflow representations"
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.11, <3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic==2.12.5",
    "pyiron_snippets==1.2.1",
]
dynamic = [ "version",]
authors = [
    { name = "Sam Waseda", email = "waseda@mpie.de" },
    { name = "Liam Huber", email = "liamhuber@greyhavensolutions.com" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://flowrep.readthedocs.io"
Repository = "https://github.com/pyiron/flowrep"

[project.optional-dependencies]
pwd = [
    "python-workflow-definition==0.1.4",
]
notebooks = [
    "numpy==2.4.4",
]

[tool.hatch.build]
include = [
    "src/flowrep"
]

[tool.hatch.build.hooks.vcs]
version-file = "src/flowrep/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/flowrep"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/flowrep"
]

[tool.hatch.version]
source = "vcs"
path = "src/flowrep/_version.py"

[tool.ruff]
exclude = ["docs", "notebooks", "_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"] #ignore line-length violations

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in init files -- we specify APIs this way

[tool.ruff.lint.isort]
known-local-folder = ["flowrep_static"]

[tool.black]
extend-exclude = '''
(
  ^/docs
)
'''

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = [
    "^docs/conf\\.py$",
    "^tests/",

]
ignore_missing_imports = true
strict_equality = true
